Fixed nav bar on small screen sizes

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -83,6 +83,14 @@ input[type="text"]:focus {
     .container, .content {
         padding: 0 5px;
     }
+
+    .btnLang {
+        display: none !important;
+    }
+
+    .nav-items ul li {
+        margin-right: 4px;
+    }
 }
 
 .header {
